tweaks to help data show up on heroku

--- a/views/users.hbs
+++ b/views/users.hbs
@@ -1,11 +1,11 @@
 <main>
     <h1>LIST OF USERS</h1>
-        <ul>
+        <ul>start unordered list
             {{#each allUsers}}
             <li>
                 <h5>Username: {{userName}}</h5>
                 <h5>Last login: {{lastLogInDate}}</h5>
             </li>
             {{/each}}
-        </ul>
+        </ul>end unordered list
 </main>
