fixed typo in landing.hbs

--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -4,7 +4,7 @@
    </div>
    <div class="showUsersForm">
        <form method="GET" action"/showUsers">
-       <input type"submit" value="Show Existing Users">
+       <input type="submit" value="Show Existing Users">
        </form>
    </div>
    </div>
