changed showUsers button to anchor, keep it simple

--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -2,12 +2,6 @@
    <div class="titleDiv">
        Index Card App
    </div>
-   <div class="showUsersForm">
-       <form method="GET" action"/showUsers">
-       <input type="submit" value="Show Existing Users">
-       </form>
-   </div>
-   </div>
    <div class="userNameInputForm">
        <form method="POST" action="/newUser/edit?_method=PUT">
             <input type="text" name="userName" id="userNameInput">
@@ -15,5 +9,6 @@
             <input type="submit" value="Submit">
        </form>
    </div>
+   <a href="/showUsers">Show Existing Users</a>
 
 </main>
