enable user creation; added post route to /, added create function to userapi, fixed form action in landing.hbs, added link to go backto landing to showUsers.hbs

--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -3,7 +3,7 @@
        Index Card App
    </div>
    <div class="userNameInputForm">
-       <form method="POST" action="/newUser/edit?_method=PUT">
+       <form method="POST" action="/">
             <input type="text" name="userName" id="userNameInput">
             <label for="userNameInput">Create User Name</label>
             <input type="submit" value="Submit">
