--- a/views/showUsers.hbs
+++ b/views/showUsers.hbs
@@ -3,10 +3,11 @@
         <ul>
             {{#each allUsers}}
             <li>
-                <h5>Username: {{userName}}</h5>
+                <h3>Username: {{userName}}</h3>
                 <h5>Last login: {{lastLogInDate}}</h5>
-                <h3>User _id: {{_id}}</h3>
+                <h5>User _id: {{_id}}</h5>
             </li>
             {{/each}}
         </ul>
+    <a href="/">Back to Landing Page</a>
 </main>
