show singel user functionality; edited apis/users.js, routes/index.js, views/showUsers.hbs, created vieww/showSingleUser.hbs

--- a/views/showUsers.hbs
+++ b/views/showUsers.hbs
@@ -4,6 +4,7 @@
             {{#each allUsers}}
             <li>
                 <h3>Username: {{userName}}</h3>
+                <a href="/{{_id}}">View {{userName}}'s User Page</a>
                 <h5>Last login: {{lastLogInDate}}</h5>
                 <h5>User _id: {{_id}}</h5>
             </li>
