fixed name of first hbs object user:name to user:userName

--- a/views/showSingleUser.hbs
+++ b/views/showSingleUser.hbs
@@ -1,7 +1,7 @@
 <main>
     <div class="showUserContainer">
         <div class="userTitle">
-            User Name: {{user.name}}
+            User Name: {{user.userName}}
         </div>
         <div class="userData">
             Last login: {{user.lastLogInDate}}
