--- a/views/showSingleUser.hbs
+++ b/views/showSingleUser.hbs
@@ -6,14 +6,14 @@
         <div class="userData">
             Last login: {{user.lastLogInDate}}
             user _id: {{user._id}}
-            <<<<View users Topics>>>>
-            <<<<View Users Cards>>>>
+            {{!-- <<<<View users Topics>>>>
+            <<<<View Users Cards>>>> --}}
         </div>
         <div class="userActions">
-            <<<<delete goes here>>>>
-            <<<<edit goes here>>>>
+            {{!-- <<<<delete goes here>>>>
+            <<<<edit goes here>>>> --}}
         </div>
     </div>
-    <a href="/">Back to Landing Page</a>
-    <a href="/showUsers">Show Existing Users</a>
+    {{!-- <a href="/">Back to Landing Page</a>
+    <a href="/showUsers">Show Existing Users</a> --}}
 </main>
