changed req.body.id to req.params.id in users.js, commented out place holders in showSingleUser.hbs

--- a/views/showSingleUser.hbs
+++ b/views/showSingleUser.hbs
@@ -1,4 +1,5 @@
 <main>
+    user object: {{user}}
     <div class="showUserContainer">
         <div class="userTitle">
             User Name: {{user.userName}}
@@ -6,12 +7,12 @@
         <div class="userData">
             Last login: {{user.lastLogInDate}}
             user _id: {{user._id}}
-            <<<<View users Topics>>>>
-            <<<<View Users Cards>>>>
+            {{!-- <<<<View users Topics>>>>
+            <<<<View Users Cards>>>> --}}
         </div>
         <div class="userActions">
-            <<<<delete goes here>>>>
-            <<<<edit goes here>>>>
+            {{!-- <<<<delete goes here>>>>
+            <<<<edit goes here>>>> --}}
         </div>
     </div>
     <a href="/">Back to Landing Page</a>
