--- a/views/showSingleUser.hbs
+++ b/views/showSingleUser.hbs
@@ -10,8 +10,8 @@
             <<<<View Users Cards>>>> --}}
         </div>
         <div class="userActions">
-            {{!-- <<<<delete goes here>>>>
-            <<<<edit goes here>>>> --}}
+            {{!-- <<<<delete goes here>>>> --}}
+            <a href="/{{user._id}}/editUser">Edit User Name</a>
         </div>
     </div>
     <a href="/">Back to Landing Page</a>
