--- a/views/showSingleUser.hbs
+++ b/views/showSingleUser.hbs
@@ -6,12 +6,11 @@
         <div class="userData">
             Last login: {{user.lastLogInDate}}
             user _id: {{user._id}}
-            {{!-- <<<<View users Topics>>>>
-            <<<<View Users Cards>>>> --}}
         </div>
         <div class="userActions">
-            {{!-- <<<<delete goes here>>>> --}}
-            <a href="/{{user._id}}/editUser">Edit User Name</a>
+            <a href="/{{user._id}}/editUser">Edit User</a>
+            {{!-- <<<<View users Topics>>>>
+            <<<<View Users Cards>>>> --}}
         </div>
     </div>
     <a href="/">Back to Landing Page</a>
