--- a/views/showSingleUser.hbs
+++ b/views/showSingleUser.hbs
@@ -1,10 +1,10 @@
 <main>
     <div class="showUserContainer">
         <div class="userTitle">
-            User Name: {{user.userName}}
+            User Name: {{user.userName}}<br>
         </div>
         <div class="userData">
-            Last login: {{user.lastLogInDate}}
+            Last login: {{user.lastLogInDate}}<br>
             user _id: {{user._id}}
         </div>
         <div class="userActions">
@@ -14,5 +14,6 @@
         </div>
     </div>
     <a href="/">Back to Landing Page</a>
+    <br>
     <a href="/showUsers">Show Existing Users</a>
 </main>
