simplified .find() in showTopics, changed link to user page in showTopics view

--- a/views/showTopics.hbs
+++ b/views/showTopics.hbs
@@ -12,7 +12,7 @@
             </li>
             {{/each}}
         </ul>
-    <a href="/{{parentUser}}">Back to User Page</a>
+    <a href="/{{topics[0].parentUser}}">Back to User Page</a>
     <a href="/">Back to Landing Page</a>
     <br>
     <a href="/showUsers">Show Existing Users</a>
