--- a/views/showTopics.hbs
+++ b/views/showTopics.hbs
@@ -1,7 +1,7 @@
 <main>
     <h1>LIST OF TOPICS</h1>
         <ul>
-            {{#each topics}}
+            {{#each allTopics}}
             <li>
                 <h3>Topic Name: {{topicName}}</h3>
                 <h3>Topic Description: {{topicDescription}}</h3>
@@ -12,7 +12,7 @@
             </li>
             {{/each}}
         </ul>
-    <a href="/{{topics[0].parentUser}}">Back to User Page</a>
+    <a href="/{{allTopics[0].parentUser}}">Back to User Page</a>
     <a href="/">Back to Landing Page</a>
     <br>
     <a href="/showUsers">Show Existing Users</a>
