create topic functionality; added new route to index, added new function to topics.js, created new view createTopics. hbs, made a few edits to showSingleUser.hbs and showTopics.hbs

--- a/views/showSingleUser.hbs
+++ b/views/showSingleUser.hbs
@@ -10,8 +10,7 @@
         </div>
         <div class="userActions">
             <a href="/{{user._id}}/editUser">Edit User</a>
-            {{!-- <<<<View users Topics>>>>
-            <<<<View Users Cards>>>> --}}
+            {{!-- <<<<View Users Cards>>>> --}}
         </div>
     </div>
     <a href="/">Back to Landing Page</a>
