--- a/views/createTopic.hbs
+++ b/views/createTopic.hbs
@@ -2,14 +2,16 @@
    <div class="titleDiv">
        Create Topic
    </div>
-   userid: {{userId}}
    <div class="TopicInputForm">
-       <form method="POST" action="/:userId/createTopic">
+       <form method="POST" action="/{{userId}}/createTopic">
             <input type="text" name="topicName" id="topicNameInput">
             <label for="userNameInput">Topic Name</label>
             <br>
             <input type="text" name="topicDescription" id="topicDescInput">
             <label for="topicDescInput">Type in Description</label>
+            <br>
+            {{!-- <input type="text" name="parentUser" id="parentUserinput" value={{userId}}>
+            <label for="parentUserinput">Parent User, dont touch</label> --}}
             <input type="submit" value="Submit">
        </form>
    </div>
