added if else to show Topics in case use has no lists, added create topic anchor to showSingleUser.hbs

--- a/views/showSingleUser.hbs
+++ b/views/showSingleUser.hbs
@@ -10,6 +10,7 @@
         </div>
         <div class="userActions">
             <a href="/{{user._id}}/editUser">Edit User</a>
+             <a href="/{{user._id}}/createTopic">Create a new Topic for {{user.userName}}</a>
             {{!-- <<<<View Users Cards>>>> --}}
         </div>
     </div>
