--- a/views/showTopics.hbs
+++ b/views/showTopics.hbs
@@ -1,5 +1,6 @@
 <main>
     <h1>LIST OF TOPICS</h1>
+    {{#if allTopics}}
         <ul>
             {{#each allTopics}}
             <li>
@@ -13,6 +14,9 @@
             </li>
             {{/each}}
         </ul>
+     {{else}}
+     <h3>There are no lists for this user. Create on on the users page</h3>
+     {{/if}}   
     <a href="/">Back to Landing Page</a>
     <br>
     <a href="/showUsers">Show Existing Users</a>
