--- a/views/showTopics.hbs
+++ b/views/showTopics.hbs
@@ -15,7 +15,7 @@
             {{/each}}
         </ul>
      {{else}}
-     <h3>There are no lists for this user. Create on on the users page</h3>
+     <h3>There are no lists for this user. Create one on the users page</h3>
      {{/if}}   
     <a href="/">Back to Landing Page</a>
     <br>
