--- a/views/showSingleTopic.hbs
+++ b/views/showSingleTopic.hbs
@@ -6,13 +6,14 @@
         <div class="topicData">
             Topic Description: {{topic.topicDescription}}<br>
             Parent User Id: {{topic.parentUser}}
+            Topic Id: {{topic._id}}
             <a href="/{{topic.parentUser}}/showTopics">See All Topics for this User</a>
         </div>
         <div class="topicActions">
                 << edit this topic >>
-                <form method="POST" action="/{{topic.parentUser}}/{{topic._id}}?_method=DELETE">
-                <input type="hidden" name="_id" value={{topic._id}}>
-                <input type="submit" value="Delete this Topic">
+                <form action="/{{topic.parentUser}}/{{topic._id}}?_method=DELETE" method="POST">
+                    <input type="hidden" name="_id" value={{topic._id}}>
+                    <input type="submit" value="Delete this Topic">
                 </form>
             {{!-- <a href="/{{user._id}}/editUser">Edit User</a> --}}
             {{!--<<<<View Users Cards>>>> --}}
