--- a/views/showSingleTopic.hbs
+++ b/views/showSingleTopic.hbs
@@ -10,7 +10,7 @@
             <a href="/{{topic.parentUser}}/showTopics">See All Topics for this User</a>
         </div>
         <div class="topicActions">
-                <a href="/{{topic.parentUser}}/edit/{{topic._id}}">Edit User</a>
+                <a href="/{{topic.parentUser}}/edit/{{topic._id}}">Edit Topic</a>
                 <form action="/{{topic.parentUser}}/{{topic._id}}?_method=DELETE" method="POST">
                     <input type="hidden" name="_id" value={{topic._id}}>
                     <input type="submit" value="Delete this Topic">
