--- a/views/editTopic.hbs
+++ b/views/editTopic.hbs
@@ -15,6 +15,8 @@
                     <label for="tName">Topic Name</label>
                     <input type="text" name="topicDescription" id='tDesc' value={{topic.topicDescription}}>
                     <label for="tDesc">Topic Description</label>
+                    {{!-- <input type="text" name="parentUser" value={{topic.parentUser}}>
+                    <input type="date" name="lastCompletedDate" value={{topic.lastCompletedDate}}> --}}
                     <input type="submit" value="Edit this Topic">
                 </form>
             {{!-- <a href="/{{user._id}}/editUser">Edit User</a> --}}
