fixed path in anchor to view single topic from showTopics.hbs

--- a/views/showTopics.hbs
+++ b/views/showTopics.hbs
@@ -7,7 +7,7 @@
                 <h3>Topic Name: {{topicName}}</h3>
                 <h3>Topic Description: {{topicDescription}}</h3>
                 <h3>Parent User Id: {{parentUser}}</h3>
-                <a href="/{{parentUser}}/{{_id}}">View This Topic</a><br> {{! will be view single topic url}}
+                <a href="/{{parentUser}}/topic/{{_id}}">View This Topic</a><br> {{! will be view single topic url}}
                 <h5>Last time this topic completed: {{lastCompletedDate}}</h5>
                 <h5>Topic _id: {{_id}}</h5>
                 <a href="/{{parentUser}}/createTopic">Create New Topic</a>
