--- a/views/showSingleTopic.hbs
+++ b/views/showSingleTopic.hbs
@@ -7,15 +7,16 @@
             Topic Description: {{topic.topicDescription}}<br>
             Parent User Id: {{topic.parentUser}}
             Topic Id: {{topic._id}}
-            <a href="/{{topic.parentUser}}/showTopics">See All Topics for this User</a>
         </div>
         <div class="topicActions">
-                <a href="/{{topic.parentUser}}/edit/{{topic._id}}">Edit Topic</a>
+                <a href="/{{topic.parentUser}}/topic/{{topic._id}}/cards">Show cards</a><br>
+                <a href="/{{topic.parentUser}}/edit/{{topic._id}}">Edit Topic</a><br>
                 <form action="/{{topic.parentUser}}/topic/{{topic._id}}?_method=DELETE" method="POST">
                     <input type="hidden" name="_id" value={{topic._id}}>
                     <input type="submit" value="Delete this Topic">
                 </form>
-            {{!--<<<<View Users Cards>>>> --}}
+                <br>
+                <a href="/{{topic.parentUser}}/showTopics">See All Topics for this User</a>
         </div>
     </div>
     <a href="/">Back to Landing Page</a>
