show single card functionality; added function in cards.js, route in index.js, anchor link in s howCards view, created showSingleCard view

--- a/views/showCards.hbs
+++ b/views/showCards.hbs
@@ -9,6 +9,8 @@
                 <h5>correctAnswerStreak: {{correctAnswerStreak}}</h5>
                 <h5>lastStreakDate: {{lastStreakDate}}</h5>
                 <h5>parentTopic: {{parentTopic}}</h5>
+                <h5>card id: {{_id}}</h5>
+                <a href="/{{parentTopic}}/cards/{{_id}}">View this card</a>
             </li>
             {{/each}}
         </ul>
