attempt to include topic object inoutput of renderallcards in cards.js for use in showCards.hbs

--- a/views/showCards.hbs
+++ b/views/showCards.hbs
@@ -17,7 +17,7 @@
         {{else}}
             <h3>There are no cards in this topic</h3>> 
         {{/if}}
-    {{!-- <a href="/{{topic.parentUser}}/topic/{{topic._id}}">Back to Topics</a> --}}
+    <a href="/{{topic.parentUser}}/topic/{{topic._id}}">Back to Topics</a>
     <a href="/showUsers">Show Existing Users</a>
     <a href="/">Back to Landing Page</a>
 </main>
