changes to landing and layout views to accomodate/test bootstrap

--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,13 +1,16 @@
 <main>
-   <div class="titleDiv">
-       Index Card App
-   </div>
-   <div class="userNameInputForm">
-       <form method="POST" action="/">
-            <input type="text" name="userName" id="userNameInput">
-            <label for="userNameInput">Create User Name</label>
-            <input type="submit" value="Submit">
-       </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="userNameInputForm">
+                    <form method="POST" action="/">
+                            <input type="text" name="userName" id="userNameInput">
+                            <label for="userNameInput">Create User Name</label>
+                            <input type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </div>
    </div>
    <a href="/showUsers">Show Existing Users</a>
 </main>
