--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,16 +1,19 @@
 <main>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm">
-                <div class="userNameInputForm">
-                    <form method="POST" action="/">
-                            <input type="text" name="userName" id="userNameInput">
-                            <label for="userNameInput">Create User Name</label>
-                            <input type="submit" value="Submit">
-                    </form>
-                </div>
+    <div class="container-fluid">
+        <div class="row p-5"></div>
+        <div class="row p-5"></div>
+        <div class="row p-5"></div>
+        <div class="row p-5 align-items-centered justify-content-center">
+            <div class="col-centered">
+                <form method="POST" action="/">
+                    <input type="text" name="userName" id="userNameInput">
+                    <label for="userNameInput">Create User Name</label>
+                    <input type="submit" value="Submit">
+                </form>
             </div>
         </div>
+        <div class="row p-5"></div>
+        <div class="row p-5"></div>
+        <div class="row p-5"></div>
    </div>
-   <a href="/showUsers">Show Existing Users</a>
 </main>
