--- a/views/createCard.hbs
+++ b/views/createCard.hbs
@@ -1,15 +1,14 @@
 <main>
-   <div class="titleDiv">
-       Create Card
-   </div>
-   <div class="TopicInputForm">
-       <form method="POST" action="/{{topicId}}/createCard">
+    <div class="container-fluid m-3">
+        <h3>Create Card</h3>
+        <form method="POST" action="/{{topicId}}/createCard">
             <input type="text" name="cardPrompt" id="cardPromptInput">
-            <label for="cardPromptInput">Card Prompt</label><br>
+            <label for="cardPromptInput">Card Prompt</label>
+            <br>
             <input type="text" name="cardAnswer" id="cardAnswerInput">
-            <label for="cardAnswerInput">Answer</label><br>
-            <input type="submit" value="Submit">
+            <label for="cardAnswerInput">Answer</label>
+            <br>
+            <input type="submit" class="btn btn-primary" value="Submit">
        </form>
-   </div>
-   <a href="/showUsers">Show Existing Users</a>
+    </div>
 </main>
