--- a/views/createTopic.hbs
+++ b/views/createTopic.hbs
@@ -1,7 +1,19 @@
 <main>
-   <div class="titleDiv">
-       Create Topic
-   </div>
+    <div class="container-fluid m-3">
+        <h3>Create Topic</h3>
+       <form method="POST" action="/{{userId}}/createTopic">
+            <input type="text" name="topicName" id="topicNameInput">
+            <label for="userNameInput">Topic Name</label>
+            <br>
+            <input type="text" name="topicDescription" id="topicDescInput">
+            <label for="topicDescInput">Type in Description</label>
+            <br>
+            <input type="submit" class="btn btn-primary" value="Submit">
+       </form>
+    </div>
+</main>
+
+{{!-- 
    <div class="TopicInputForm">
        <form method="POST" action="/{{userId}}/createTopic">
             <input type="text" name="topicName" id="topicNameInput">
@@ -12,8 +24,6 @@
             <br>
             {{!-- <input type="text" name="parentUser" id="parentUserinput" value={{userId}}>
             <label for="parentUserinput">Parent User, dont touch</label> --}}
-            <input type="submit" value="Submit">
+            {{!-- <input type="submit" value="Submit">
        </form>
-   </div>
-   <a href="/showUsers">Show Existing Users</a>
-</main>
+   </div> --}}
