--- a/views/editUser.hbs
+++ b/views/editUser.hbs
@@ -1,26 +1,22 @@
 <main>
-    <div class="showUserContainer">
-        <div class="userTitle">
-            User Name: {{user.userName}}
-        </div>
-        <div class="userData">
-            Last login: {{user.lastLogInDate}}
-            <br>
-            user _id: {{user._id}}
-        </div>
-        <div class="userActions">
-            <form method="POST" action="/{{user._id}}/editUser?_method=PATCH">
-                <input type="text" name="userName" id="username" value={{user.userName}}>
-                <label for="username">Enter new User Name here</label>
-                <input type="submit" value="Submit">
-            </form>
-            <br>
-            <form method="POST" action="/{{user._id}}/editUser?_method=DELETE">
-                <input type="submit" value="Delete User">
-            </form>
+    <div class="container-fluid m-3">
+        <h3>Edit User</h3>
+        <div class="card p-1 m-4" style="width: 50rem;">
+            <div class="card-header">User Name: {{user.userName}}
+            </div>
+            <div class="card-body">
+                <form method="POST" action="/{{user._id}}/editUser?_method=PATCH">
+                    <label for="username">New User Name</label>
+                    <input type="text" name="userName" id="username" value={{user.userName}}>
+                    <br>
+                    <input type="submit" class="btn btn-primary" value="Submit">
+                </form>
+            </div>
+            <div class="card-footer">
+                <form method="POST" action="/{{user._id}}/editUser?_method=DELETE">
+                    <input type="submit" class="btn btn-primary" value="Delete User">
+                </form>
+            </div>
         </div>
     </div>
-    <a href="/{{user._id}}">Back to User Page</a>
-    <a href="/">Back to Landing Page</a>
-    <a href="/showUsers">Show Existing Users</a>
 </main>
