--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,5 +1,5 @@
 <main>
-    <div class="container-fluid">
+    <div class="container-fluid m-3">
         <div class="row p-5"></div>
         <div class="row p-5"></div>
         <div class="row p-5"></div>
