--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
             <div class="navbar-brand">
                 Index Card Manager
             </div>
