--- a/views/showSingleCard.hbs
+++ b/views/showSingleCard.hbs
@@ -1,22 +1,17 @@
 <main>
-    <div class="showTopicContainer">
-        <div class="topicData">
-            Prompt: {{card.cardPrompt}}<br>
-            Answer: {{card.cardAnswer}}<br>
-            Parent Topic Id: {{card.parentTopic}}<br>
-            Card Id: {{card._id}}<br>
-        </div>
-        <div class="topicActions">
-                <a href="/{{card.parentTopic}}/editCard/{{card._id}}">Edit Card</a><br>
+    <div class="container-fluid m-3">
+        <h3>Card Page</h3>
+       <div class="card p-1 m-4" style="width: 50rem;">
+           <div class="card-header">Prompt: {{card.cardPrompt}}</div>
+           <div class="card-body">Answer: {{card.cardAnswer}}</div>
+           <div class="card-footer">
+                <a href="/{{card.parentTopic}}/editCard/{{card._id}}" class="btn btn-primary">Edit Card</a>
+                &emsp;&emsp;
                 <form action="/{{card.parentTopic}}/editCard/{{card._id}}?_method=DELETE" method="POST">
                     <input type="hidden" name="_id" value={{card._id}}>
-                    <input type="submit" value="Delete this Card">
+                    <input type="submit" class="btn btn-primary" value="Delete this Card">
                 </form>
+           </div>
         </div>
     </div>
-    <a href="/">Back to Landing Page</a>
-    <br>
-    <a href="/showUsers">Show Existing Users</a>
-    <br>
-    <a href="/{{card.parentTopic}}">??</a>
 </main>      
