--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -8,7 +8,7 @@
                 <form method="POST" action="/">
                     <input type="text" name="userName" id="userNameInput">
                     <label for="userNameInput">Create User Name</label>
-                    <input type="submit" value="Submit">
+                    <input type="submit" class="btn btn-primary" value="Submit">
                 </form>
             </div>
         </div>
