--- a/views/showUsers.hbs
+++ b/views/showUsers.hbs
@@ -4,19 +4,9 @@
             {{#each allUsers}}
                 <div class="card p-1 m-4">
                     <div class="card-header">User Name: {{userName}}</div>
-                    <div class="card-body"><a href="/{{_id}}" class="btn btn-primary">View {{userName}}'s User Page</a></div>
-                    <div class="card-footer">User Id: {{_id}}</div>
+                    <div class="card-body"><a href="/{{_id}}"
+                     class="btn btn-primary">View {{userName}}'s User Page</a></div>
                 </div>
             {{/each}}
-            {{!-- <ul>
-                {{#each allUsers}}
-                <li>
-                    <h3>Username: {{userName}}</h3>
-                    <a href="/{{_id}}">View {{userName}}'s User Page</a>
-                    <h5>Last login: {{lastLogInDate}}</h5>
-                    <h5>User _id: {{_id}}</h5>
-                </li>
-                {{/each}}
-            </ul> --}}
     </div>
 </main>
