--- a/views/showSingleTopic.hbs
+++ b/views/showSingleTopic.hbs
@@ -11,7 +11,7 @@
                 &emsp;&emsp;
                 <a href="/{{topic.parentUser}}/editTopic/{{topic._id}}" class="btn btn-primary">Edit Topic</a>
                 &emsp;&emsp;
-                <a href="/{{topic.parentUser}}/showTopics" class="btn btn-primary">See All Topics for this User</a>
+                <a href="/{{topic.parentUser}}/showTopics" class="btn btn-primary">Topics for this User</a>
                 <form action="/{{topic.parentUser}}/topic/{{topic._id}}?_method=DELETE" method="POST">
                     <input type="hidden" name="_id" value={{topic._id}}>
                     <input type="submit" class="btn btn-primary" value="Delete this Topic">
