--- a/views/showSingleTopic.hbs
+++ b/views/showSingleTopic.hbs
@@ -1,44 +1,25 @@
 <main>
     <div class="container-fluid m-3">
-        <h3>Topic Page</h3>
-       <div class="card p-1 m-4" style="width: 50rem;">
-           <div class="card-header">Topic Name: {{topic.topicName}}</div>
-           <div class="card-body">Topic Description: {{topic.topicDescription}}</div>
-           <div class="card-footer">
-                <a href="/{{topic.parentUser}}/topic/{{topic._id}}/cards" class="btn btn-primary">Show cards</a>
-                &emsp;&emsp;
-                <a href="/{{topic._id}}/createCard" class="btn btn-primary">Create Card</a>
-                &emsp;&emsp;
-                <a href="/{{topic.parentUser}}/editTopic/{{topic._id}}" class="btn btn-primary">Edit Topic</a>
-                &emsp;&emsp;
-                <a href="/{{topic.parentUser}}/showTopics" class="btn btn-primary">Topics for this User</a>
-                <form action="/{{topic.parentUser}}/topic/{{topic._id}}?_method=DELETE" method="POST">
-                    <input type="hidden" name="_id" value={{topic._id}}>
-                    <input type="submit" class="btn btn-primary" value="Delete this Topic">
-                </form>
-           </div>
+        <div class="h2">Topic Page</div>
+        <div class="card-column p-1 m-4" style="width: 35rem;">
+            <div class="card-header">Topic Name: {{topic.topicName}}</div>
+            <div class="card-body">Topic Description: {{topic.topicDescription}}</div>
+            <div class="card-footer">
+                <div class="p-1">
+                    <a href="/{{topic.parentUser}}/topic/{{topic._id}}/cards" class="btn btn-primary">Show Cards</a>
+                    <a href="/{{topic._id}}/createCard" class="btn btn-primary">Create A Card</a> 
+                </div>
+                <div class="p-1">
+                    <a href="/{{topic.parentUser}}/editTopic/{{topic._id}}" class="btn btn-primary">Edit this Topic</a>
+                    <a href="/{{topic.parentUser}}/showTopics" class="btn btn-primary">Show Topics</a>
+                </div> 
+                <div class="p-1">     
+                        <form action="/{{topic.parentUser}}/topic/{{topic._id}}?_method=DELETE" method="POST">
+                            <input type="hidden" name="_id" value={{topic._id}}>
+                            <input type="submit" class="btn btn-danger" value="Delete this Topic">
+                        </form>
+                </div>
+            </div>
         </div>
     </div>
 </main>       
-
- {{!-- <div class="showTopicContainer">
-        <div class="topicTitle">
-             Topic Name: {{topic.topicName}}
-        </div>
-        <div class="topicData">
-            Topic Description: {{topic.topicDescription}}<br>
-            Parent User Id: {{topic.parentUser}}
-            Topic Id: {{topic._id}}
-        </div>
-        <div class="topicActions">
-                <a href="/{{topic.parentUser}}/topic/{{topic._id}}/cards">Show cards</a><br>
-                <a href="/{{topic._id}}/createCard">Create Card</a><br>
-                <a href="/{{topic.parentUser}}/editTopic/{{topic._id}}">Edit Topic</a><br>
-                <form action="/{{topic.parentUser}}/topic/{{topic._id}}?_method=DELETE" method="POST">
-                    <input type="hidden" name="_id" value={{topic._id}}>
-                    <input type="submit" value="Delete this Topic">
-                </form>
-                <br>
-                <a href="/{{topic.parentUser}}/showTopics">See All Topics for this User</a>
-        </div>
-    </div> --}}
