--- a/views/editCard.hbs
+++ b/views/editCard.hbs
@@ -8,10 +8,10 @@
            <div class="card-footer">
                 <form action="/{{card.parentTopic}}/editCard/{{card._id}}?_method=PATCH" method="POST">
                     <label for="cPromptInput">Prompt</label>
-                    <input type="text" name="cardPrompt" id="cPromptInput" value={{card.cardPrompt}}>
+                    <input type="text" name="cardPrompt" id="cPromptInput" value="{{card.cardPrompt}}">
                     <br>
                     <label for="cAnsweInput">Answer</label>
-                    <input type="text" name="cardAnswer" id="cAnswerInput" value={{card.cardAnswer}}>
+                    <input type="text" name="cardAnswer" id="cAnswerInput" value="{{card.cardAnswer}}">
                     <br>
                     <input type="submit" class="btn btn-primary" value="Submit changes">
                 </form>
