--- a/views/editTopic.hbs
+++ b/views/editTopic.hbs
@@ -12,10 +12,10 @@
             <div class="card-footer">
                 <form action="/{{topic.parentUser}}/editTopic/{{topic._id}}?_method=PATCH" method="POST">
                     <label for="tName">Topic Name</label>
-                    <input type="text" name="topicName" id="tName" value={{topic.topicName}}>
+                    <input type="text" name="topicName" id="tName" value="{{topic.topicName}}">
                     <br>
                     <label for="tDesc">Topic Description</label>
-                    <input type="text" name="topicDescription" id='tDesc' value={{topic.topicDescription}}>  
+                    <input type="text" name="topicDescription" id='tDesc' value="{{topic.topicDescription}}">  
                     <br>
                     <input type="submit" class="btn btn-primary" value="Edit this Topic">
                 </form>
