--- a/views/editUser.hbs
+++ b/views/editUser.hbs
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <form method="POST" action="/{{user._id}}/editUser?_method=PATCH">
                     <label for="username">New User Name</label>
-                    <input type="text" name="userName" id="username" value={{user.userName}}>
+                    <input type="text" name="userName" id="username" value="{{user.userName}}">
                     <br>
                     <input type="submit" class="btn btn-primary" value="Submit">
                 </form>
