--- a/views/showCards.hbs
+++ b/views/showCards.hbs
@@ -1,22 +1,25 @@
 <main>
     <div class="container-fluid m-3">
-        <h1>CARDS</h1>
+        <div class="h2">CARDS</div>
+        <a href="/{{topic._id}}/createCard" class="btn btn-primary">Create a Card</a>
         {{#if allCards}}
+            <div class="card-deck">
             {{#each allCards}}
-            <div class="card p-1 m-4" style="width: 50rem;">
-                <div class="card-header">Prompt: {{cardPrompt}}</div>
-                <div class="card-body">
-                    <div class="card-text">Answer: {{cardAnswer}}</div>
+                <div class="card p-1 m-4">
+                    <div class="card-header">Prompt: {{cardPrompt}}</div>
+                    <div class="card-body">
+                        <div class="card-text">Answer: {{cardAnswer}}</div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="/{{parentTopic}}/cards/{{_id}}" class="btn btn-primary">View this card</a>
+                    </div>
                 </div>
-                <div class="card-footer">
-                    <a href="/{{parentTopic}}/cards/{{_id}}" class="btn btn-primary">View this card</a>
-                    &emsp;&emsp;
-                    <a href="/{{parentTopic}}/middle" class="btn btn-primary">To Parent Topic</a>
-                </div>
-            </div>
             {{/each}}
+            </div>
+            <a href="/{{topic.parentUser}}/topic/{{topic._id}}" class="btn btn-primary">Back to Topic</a>
         {{else}}
             <h3>There are no cards in this topic</h3>
+            <a href="/{{topic.parentUser}}/topic/{{topic._id}}" class="btn btn-primary">Back to Topic</a>
         {{/if}}
     </div>
 </main>
